@@ -29,10 +29,8 @@ package treeview.action;
 import treeview.*;
 
 //{{{ AWT classes
-import java.awt.datatransfer.Clipboard;
 import java.awt.event.ActionEvent;
-import java.awt.Toolkit;
-import java.awt.HeadlessException;
+import java.awt.Component;
 //}}}
 
 //{{{ Swing classes
@@ -43,7 +41,7 @@ import javax.swing.KeyStroke;
 
 //{{{ jsXe classes
 import net.sourceforge.jsxe.jsXe;
-import net.sourceforge.jsxe.LocalizedAction;
+import net.sourceforge.jsxe.action.ContextSpecificAction;
 import net.sourceforge.jsxe.gui.DocumentView;
 import net.sourceforge.jsxe.gui.Messages;
 import net.sourceforge.jsxe.gui.TabbedView;
@@ -60,24 +58,10 @@ import net.sourceforge.jsxe.util.Log;
  * @author Ian Lewis (<a href="mailto:IanLewis@member.fsf.org">IanLewis@member.fsf.org</a>)
  * @version $Id$
  */
-public class CopyNodeAction extends LocalizedAction {
-    
-    //{{{ CopyNodeAction constructor
-    /**
-     * Creates a action that copies the current node out of the tree and into
-     * the clipboard.
-     */
-    public CopyNodeAction() {
-        super(TreeViewPlugin.PLUGIN_NAME+".copy");
-    }//}}}
-    
-    //{{{ getLabel()
-    public String getLabel() {
-        return Messages.getMessage("common.copy");
-    }//}}}
+public class CopyNodeAction implements ContextSpecificAction.ActionImplementation {
     
     //{{{ invoke()
-    public void invoke(TabbedView view, ActionEvent evt) {
+    public void invoke(TabbedView view, Component comp, ActionEvent evt) {
         DocumentView docView = view.getDocumentView();
         if (docView instanceof DefaultView) {
             DefaultView defView = (DefaultView)docView;
